--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     
+    <organization>
+		<name>Artificial Intelligence Center (AIC)</name>
+		<url>http://aic.fel.cvut.cz/</url>
+	</organization>
+    
     <properties>
         <!--encoding of the maven text output (code generation, ...)--> 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +34,8 @@
     <build>
         <pluginManagement>
             <plugins>
+                
+                <!--apache maven plugins-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -64,18 +71,69 @@
                         </execution>
                     </executions>
                 </plugin>
+                
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.0.1</version>
+                </plugin>
+                
+                <!--other plugins-->
+                <plugin>
+                    <groupId>ninja.fido.config</groupId>
+                    <artifactId>config-maven-plugin</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                    <executions>
+                        <execution>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>build-config</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <path>${config.path}</path>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
     
     <dependencyManagement>
         <dependencies>
+            <!--aicenter github projects-->
+            
+            <!--other aic projects-->
+            
+            <!--other projects-->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
                 <scope>test</scope>
             </dependency>
+            
+            <dependency>
+                <groupId>ninja.fido.config</groupId>
+                <artifactId>core</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <repositories>
+        <repository>
+            <id>ossrhs</id>
+            <name>Maven central snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
+    
+    <pluginRepositories>
+        <pluginRepository>
+            <id>ossrhs</id>
+            <name>Maven central snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
