--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
     <dependencyManagement>
         <dependencies>
             <!--aicenter github projects-->
+            <dependency>
+                <groupId>cz.cvut.fel.aic</groupId>
+                <artifactId>geographtools</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
             
             <!--other aic projects-->
             
