--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
                 <artifactId>geographtools</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>cz.cvut.fel.aic</groupId>
+                <artifactId>agentpolis</artifactId>
+                <version>5.0.0-SNAPSHOT</version>
+            </dependency>
             
             <!--other aic projects-->
             
