--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <pluginManagement>
             <plugins>
                 
-                <!--apache maven plugins-->
+                <!--apache and mojo plugins-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -63,7 +63,6 @@
                                 <goal>jar</goal>
                             </goals>
                             <configuration>
-                                
                                 <additionalparam>-Xdoclint:none</additionalparam>
                             </configuration>
                             <phase>package</phase>
@@ -76,6 +75,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.0.1</version>
+                </plugin>
+                
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.6.0</version>
                 </plugin>
                 
                 <!--other plugins-->
@@ -111,6 +116,11 @@
                 <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>agentpolis</artifactId>
                 <version>5.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>cz.cvut.fel.aic</groupId>
+                <artifactId>graph-importer</artifactId>
+                <version>1.7-SNAPSHOT</version>
             </dependency>
             
             <!--other aic projects-->
