--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
             </dependency>
             <dependency>
                 <groupId>cz.cvut.fel.aic</groupId>
+                <artifactId>alite</artifactId>
+                <version>1.2-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>agentpolis</artifactId>
                 <version>5.0.0-SNAPSHOT</version>
             </dependency>
@@ -131,6 +136,11 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.9.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
