--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
                 <plugin>
                     <groupId>ninja.fido.config</groupId>
                     <artifactId>config-maven-plugin</artifactId>
-                    <version>1.0-SNAPSHOT</version>
+                    <version>1.0</version>
                     <executions>
                         <execution>
                             <phase>generate-sources</phase>
@@ -178,7 +178,7 @@
             <dependency>
                 <groupId>ninja.fido.config</groupId>
                 <artifactId>core</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -193,18 +193,5 @@
             <name>atg-repo</name>
             <url>http://jones.felk.cvut.cz/artifactory/repo</url>
         </repository>
-        <repository>
-            <id>ossrhs</id>
-            <name>Maven central snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
     </repositories>
-    
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ossrhs</id>
-            <name>Maven central snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
