--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.cvut.fel.aic</groupId>
     <artifactId>aicenter-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     
     <organization>
@@ -110,22 +110,22 @@
             <dependency>
                 <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>geographtools</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>alite</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>1.2</version>
             </dependency>
             <dependency>
                 <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>agentpolis</artifactId>
-                <version>5.0.0-SNAPSHOT</version>
+                <version>5.0</version>
             </dependency>
             <dependency>
                 <groupId>cz.cvut.fel.aic</groupId>
                 <artifactId>graph-importer</artifactId>
-                <version>1.7-SNAPSHOT</version>
+                <version>2.0</version>
             </dependency>
             
             <!--other projects-->
