--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.cvut.fel.aic</groupId>
 	<artifactId>aicenter-parent</artifactId>
-	<version>1.1</version>
+	<version>1.1.1</version>
 	<packaging>pom</packaging>
 	
 	<organization>
@@ -117,7 +117,7 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>geographtools</artifactId>
-				<version>1.1</version>
+				<version>1.1.1</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
@@ -127,12 +127,12 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>agentpolis</artifactId>
-				<version>5.1</version>
+				<version>5.1.1</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>graph-importer</artifactId>
-				<version>2.1</version>
+				<version>2.1.1</version>
 			</dependency>
 			
 			<!--other projects-->
@@ -145,17 +145,17 @@
 			<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-core</artifactId>
-				<version>2.9.5</version>
+				<version>2.9.8</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
-				<version>2.9.5</version>
+				<version>2.9.8</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.9.5</version>
+				<version>2.9.8</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
@@ -192,6 +192,11 @@
 				<groupId>javax.vecmath</groupId>
 				<artifactId>vecmath</artifactId>
 				<version>1.5.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.locationtech.jts</groupId>
+				<artifactId>jts-core</artifactId>
+				<version>1.16.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
