--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>geographtools</artifactId>
-				<version>2.0.0</version>
+				<version>3.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
