--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.cvut.fel.aic</groupId>
 	<artifactId>aicenter-parent</artifactId>
-	<version>3.0.0</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<organization>
@@ -117,7 +117,7 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>geographtools</artifactId>
-				<version>2.0.1</version>
+				<version>2.1.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
@@ -127,12 +127,12 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>agentpolis</artifactId>
-				<version>7.0.0</version>
+				<version>8.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>graph-importer</artifactId>
-				<version>4.0.0</version>
+				<version>4.1.0-SNAPSHOT</version>
 			</dependency>
 			
 			<!--other projects-->
