--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@
 			<releases />
 			<id>atg-repo</id>
 			<name>atg-repo</name>
-			<url>http://jones.felk.cvut.cz/artifactory/repo</url>
+			<url>https://jones.felk.cvut.cz/artifactory/repo</url>
 		</repository>
 	</repositories>
 </project>
