--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.cvut.fel.aic</groupId>
 	<artifactId>aicenter-parent</artifactId>
-	<version>4.0.0-SNAPSHOT</version>
+	<version>4.0.0</version>
 	<packaging>pom</packaging>
 	
 	<organization>
@@ -117,22 +117,22 @@
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>geographtools</artifactId>
-				<version>3.0.0-SNAPSHOT</version>
+				<version>3.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>alite</artifactId>
-				<version>3.0.0-SNAPSHOT</version>
+				<version>3.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>agentpolis</artifactId>
-				<version>8.0.0-SNAPSHOT</version>
+				<version>8.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>cz.cvut.fel.aic</groupId>
 				<artifactId>graph-importer</artifactId>
-				<version>5.0.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			
 			<!--other projects-->
